center part expands correctly now. need to fix white text over image and right panel overlap

--- a/public/tuiter/explore.css
+++ b/public/tuiter/explore.css
@@ -36,8 +36,8 @@
 
 .tweet-spacing {
     float: left;
-    width: 80%;
-    margin-right: 30px;
+    margin-right: 20px;
+    width: 100%;
 }
 
 .grey-text-color {
